fix: add text-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@
   font-size: 1rem;
   line-height: 150%;
   letter-spacing: 0.32px;
+  text-wrap: pretty;
 }
 
 .visually-hidden {
